--- a/Index.html
+++ b/Index.html
@@ -7,24 +7,79 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica', sans-serif;
+            background: linear-gradient(to right, #6a11cb, #2575fc);
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: rgba(255, 255, 255, 0.9);
+            color: #333;
+            border-radius: 10px;
+            max-width: 800px;
+            width: 100%;
+            padding: 30px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
             margin: 20px;
         }
-        .container {
-            max-width: 800px;
-            margin: auto;
+
+        h2, h3 {
+            color: #333;
         }
+
         input, textarea, button {
             width: 100%;
             padding: 10px;
-            margin: 10px 0;
+            margin-top: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 16px;
+            box-sizing: border-box;
         }
+
+        button {
+            background-color: #6a11cb;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            border: none;
+        }
+
+        button:hover {
+            background-color: #2575fc;
+        }
+
         #successMessage {
             color: green;
             display: none;
         }
+
         canvas {
             margin-top: 30px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            background: #f7f7f7;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            color: #333;
+        }
+
+        ul li:nth-child(even) {
+            background: #eaeaea;
         }
     </style>
 </head>
@@ -33,22 +88,22 @@
         <h2>Daily Review</h2>
         <form id="dailyReviewForm">
             <label for="priority1">Priority 1:</label>
-            <input type="text" id="priority1" name="priority1">
+            <input type="text" id="priority1" name="priority1" placeholder="First priority of the day">
 
             <label for="priority2">Priority 2:</label>
-            <input type="text" id="priority2" name="priority2">
+            <input type="text" id="priority2" name="priority2" placeholder="Second priority of the day">
 
             <label for="priority3">Priority 3:</label>
-            <input type="text" id="priority3" name="priority3">
+            <input type="text" id="priority3" name="priority3" placeholder="Third priority of the day">
 
             <label for="completed">Completed Tasks:</label>
-            <textarea id="completed" name="completed" rows="2"></textarea>
+            <textarea id="completed" name="completed" rows="2" placeholder="What did you complete today?"></textarea>
 
             <label for="challenges">Challenges Faced:</label>
-            <textarea id="challenges" name="challenges" rows="2"></textarea>
+            <textarea id="challenges" name="challenges" rows="2" placeholder="What challenges did you face?"></textarea>
 
             <label for="improvements">Improvements for Tomorrow:</label>
-            <textarea id="improvements" name="improvements" rows="2"></textarea>
+            <textarea id="improvements" name="improvements" rows="2" placeholder="How can you improve tomorrow?"></textarea>
 
             <label for="timeManagement">Time Management (1-10):</label>
             <input type="number" id="timeManagement" name="timeManagement" min="1" max="10">
@@ -131,13 +186,15 @@
                             label: 'Time Management',
                             data: timeManagement,
                             borderColor: 'rgba(75, 192, 192, 1)',
-                            fill: false
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            fill: true
                         },
                         {
                             label: 'Energy Levels',
                             data: energyLevels,
                             borderColor: 'rgba(153, 102, 255, 1)',
-                            fill: false
+                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                            fill: true
                         }
                     ]
                 },
