--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <style>
         body {
             font-family: 'Helvetica', sans-serif;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
+            background: #1f1f1f; /* Darker background */
             color: #fff;
             margin: 0;
-            padding: 0;
+            padding: 20px; /* Added padding for spacing */
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start; /* Change from center to flex-start */
+            min-height: 100vh; /* Use min-height instead of height to allow page growth */
+            overflow-x: hidden;
         }
 
         .container {
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #333;
+            background-color: #2c2c2c; /* Muted dark background */
+            color: #fff;
             border-radius: 10px;
             max-width: 800px;
             width: 100%;
             padding: 30px;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
             margin: 20px;
         }
 
         h2, h3 {
-            color: #333;
+            color: #e0e0e0; /* Slightly lighter text */
         }
 
         input, textarea, button {
@@ -38,14 +39,16 @@
             padding: 10px;
             margin-top: 10px;
             margin-bottom: 15px;
-            border: 1px solid #ddd;
+            border: none;
             border-radius: 5px;
             font-size: 16px;
             box-sizing: border-box;
+            background-color: #444; /* Darker input background */
+            color: #fff; /* White text for input */
         }
 
         button {
-            background-color: #6a11cb;
+            background-color: #4a90e2; /* Subtle blue button */
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
@@ -53,11 +56,11 @@
         }
 
         button:hover {
-            background-color: #2575fc;
+            background-color: #357ABD; /* Darker blue hover effect */
         }
 
         #successMessage {
-            color: green;
+            color: #7bd47b; /* Green success message */
             display: none;
         }
 
@@ -71,15 +74,15 @@
         }
 
         ul li {
-            background: #f7f7f7;
+            background: #3c3c3c;
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 5px;
-            color: #333;
+            color: #fff;
         }
 
         ul li:nth-child(even) {
-            background: #eaeaea;
+            background: #4a4a4a;
         }
     </style>
 </head>
