--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <style>
         body {
             font-family: 'Helvetica', sans-serif;
-            background: #1f1f1f; /* Darker background */
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #fff;
             margin: 0;
-            padding: 20px; /* Added padding for spacing */
+            padding: 20px;
             display: flex;
             justify-content: center;
-            align-items: flex-start; /* Change from center to flex-start */
-            min-height: 100vh; /* Use min-height instead of height to allow page growth */
+            align-items: flex-start;
+            min-height: 100vh;
             overflow-x: hidden;
         }
 
         .container {
-            background-color: #2c2c2c; /* Muted dark background */
-            color: #fff;
+            background-color: rgba(255, 255, 255, 0.85); /* Lightened background */
+            color: #333; /* Darker text for better contrast */
             border-radius: 10px;
             max-width: 800px;
             width: 100%;
@@ -31,7 +32,7 @@
         }
 
         h2, h3 {
-            color: #e0e0e0; /* Slightly lighter text */
+            color: #333; /* Dark text for headings */
         }
 
         input, textarea, button {
@@ -43,12 +44,12 @@
             border-radius: 5px;
             font-size: 16px;
             box-sizing: border-box;
-            background-color: #444; /* Darker input background */
-            color: #fff; /* White text for input */
+            background-color: #f0f0f0; /* Lightened input background */
+            color: #333; /* Dark text */
         }
 
         button {
-            background-color: #4a90e2; /* Subtle blue button */
+            background-color: #4a90e2;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
@@ -56,11 +57,11 @@
         }
 
         button:hover {
-            background-color: #357ABD; /* Darker blue hover effect */
+            background-color: #357ABD;
         }
 
         #successMessage {
-            color: #7bd47b; /* Green success message */
+            color: #7bd47b;
             display: none;
         }
 
@@ -74,15 +75,15 @@
         }
 
         ul li {
-            background: #3c3c3c;
+            background: rgba(240, 240, 240, 0.8); /* Softer, pastel background for the list items */
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 5px;
-            color: #fff;
+            color: #333; /* Dark text */
         }
 
         ul li:nth-child(even) {
-            background: #4a4a4a;
+            background: rgba(230, 230, 230, 0.8); /* Alternating light pastel color */
         }
     </style>
 </head>
@@ -168,7 +169,7 @@
             });
         }
 
-        // Initialize the Chart.js chart
+        // Initialize the Chart.js chart with updated colors
         let chart;
         function updateChart() {
             const reviews = JSON.parse(localStorage.getItem('dailyReviews')) || [];
@@ -188,15 +189,15 @@
                         {
                             label: 'Time Management',
                             data: timeManagement,
-                            borderColor: 'rgba(75, 192, 192, 1)',
-                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            borderColor: 'rgba(255, 159, 64, 1)', // Soft orange line
+                            backgroundColor: 'rgba(255, 159, 64, 0.2)', // Soft orange fill
                             fill: true
                         },
                         {
                             label: 'Energy Levels',
                             data: energyLevels,
-                            borderColor: 'rgba(153, 102, 255, 1)',
-                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                            borderColor: 'rgba(54, 162, 235, 1)', // Soft blue line
+                            backgroundColor: 'rgba(54, 162, 235, 0.2)', // Soft blue fill
                             fill: true
                         }
                     ]
